@@ -3,7 +3,7 @@
  * 
  * $Id$
  * 
- * Copyright (c) 1991-2003 Francois Felix Ingrand.
+ * Copyright (c) 1991-2011 Francois Felix Ingrand.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -49,7 +49,7 @@ extern char *dump_file;
 
 extern char initial_command[LINSIZ];
 
-PBoolean install_user_trace;
+extern PBoolean install_user_trace;
 
 #ifdef CONNECT_TO_IXTET
 extern char *ixtet_name;	/* The name of the IxTeT reco module. */
